Search API 1.x, dev (xxxx-xx-xx):
---------------------------------
- #2939085 by mattgill, drunken monkey: Fixed fatal error in Views when trying
  to set keywords conjunction on aborted query.
- #2933811 by drunken monkey: Fixed coding standards in new Drush code.
- #2932347 by drunken monkey, ghaya: Fixed case insensitive matching for
  highlighting non-ASCII text.
- #2938288 by drunken monkey: Fixed problems with PHP 7.2.
- #2934321 by Graber, drunken monkey: Fixed Views total for views with pager
  offset.
- #2932347 by drunken monkey, ghaya: Fixed case insensitive matching for
  highlighting non-ASCII text.
- #2933309 by drunken monkey, mkalkbrenner: Made some helper methods in the
  CommandHelper class public.
- #2928279 by drunken monkey, borisson_: Added a test for the default tracker
  plugin.

Search API 1.6 (2017-12-24):
----------------------------
- #2669962 by kevin.dutra, drunken monkey, kristofferwiklund, borisson_: Added
  option to change the order in which items are indexed.
- #2917399 by drunken monkey, andypost, borisson_, zenimagine: Fixed definition
  of Views taxonomy term plugins.
- #2922874 by drunken monkey, borisson_: Fixed DBMS compatibility handling when
  a non-default database is used with the Database backend.
- #2923910 by George Bills, drunken monkey, eft, borisson_, robin.ingelbrecht:
  Fixed handling of array-valued Views fulltext filter input.
- #2914478 by borisson_, mpp, drunken monkey, pfrenssen, claudiu.cristea,
  kevin.dutra, SylvainM, jhedstrom, bircher: Added integration with Drush 9.
- #2926733 by drunken monkey, borisson_: Fixed indexing of leading/trailing
  whitespace in fulltext tokens on database backend.
- #2922024 by drunken monkey, borisson_: Fixed Stemmer incorrectly processing
  non-English searches.
- #2931730 by drunken monkey: Adapted tests to changes in drupal_set_message().
- #2929739 by drunken monkey, borisson_: Improved adherence to coding standards.